--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,7 +3,7 @@ main {
 }
 
 h1 {
-  font-size: 1.8rem;
+  font-size: 5rem;
   padding: 1rem 0;
 }
 h2 {
@@ -14,6 +14,6 @@ h3 {
   padding: 1rem 0;
 }
 
-.rating span {
+Header .rating span {
   margin: 0.1rem;
 }
