--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,6 +14,15 @@ h3 {
   padding: 1rem 0;
 }
 
+.image1 {
+  display: flex;
+  top: 100000px;
+}
+.werm {
+  height: 100px;
+  width: 100px;
+}
+
 Header .rating span {
   margin: 0.1rem;
 }
