--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,10 +1,35 @@
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  background: transparent;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 main {
   min-height: 80vh;
+}
+.bg {
+  width: fit-content;
+  height: fit-content;
+  position: relative;
+  overflow-y: hidden;
+  overflow-x: hidden;
+  top: -100px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  image-rendering: optimizeQuality;
+  image-rendering: crisp-edges;
+  z-index: 0;
 }
 
 h1 {
   font-size: 5rem;
   padding: 1rem 0;
+  z-index: 1;
 }
 h2 {
   font-size: 1.4rem;
@@ -14,9 +39,8 @@ h3 {
   padding: 1rem 0;
 }
 
-.image1 {
-  display: flex;
-  top: 100000px;
+.title {
+  top: 1000px;
 }
 .werm {
   height: 100px;
