--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -17,17 +17,16 @@ body {
   overflow-y: hidden;
 }
 
-/* div {
-  z-index: 1;
-} */
-
+.title {
+  z-index: 2;
+}
 .werm {
   position: absolute;
   top: -10px;
   left: -15px;
   height: 150px;
   width: 150px;
-  z-index: 4;
+  z-index: 5;
 }
 
 .box1 {
@@ -40,7 +39,7 @@ body {
   background-color: rgba(0, 0, 0, 0.185);
 
   vertical-align: top;
-  z-index: 3;
+  z-index: 2;
   animation-name: box1;
   animation-duration: 5s;
   animation-delay: 1s;
@@ -61,15 +60,17 @@ body {
 .nav-selectors {
   width: 100%;
   display: flex;
+  z-index: 2;
   justify-content: flex-end;
   text-align: center;
   align-items: center;
 }
 
 .nav-link {
-  display: flex;
+  display: absolute;
   justify-content: space-between;
   align-items: center;
+  z-index: 3;
   text-decoration: none;
   color: rgb(0, 0, 0);
   padding: 10px;
@@ -109,10 +110,6 @@ h2 {
 }
 h3 {
   padding: 1rem 0;
-}
-
-.title {
-  top: 1000px;
 }
 
 Header .rating span {
