--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -23,17 +23,18 @@ h1 {
 }
 .word {
   position: absolute;
-
+  font-size: xx-large;
+  color: rgba(0, 0, 0, 0.475);
   top: 300px;
-  left: 100px;
+  left: 300px;
   z-index: 1;
 }
 .werm {
   position: absolute;
-  top: -10px;
-  left: -15px;
-  height: 150px;
-  width: 150px;
+  top: -22px;
+  left: 40px;
+  height: 100px;
+  width: 100px;
   z-index: 5;
 }
 
@@ -42,7 +43,7 @@ h1 {
   position: relative;
   top: 0px;
   left: 0px;
-  height: 100px;
+  height: 50px;
   width: 100;
   background-color: rgba(0, 0, 0, 0.185);
 
@@ -63,6 +64,8 @@ h1 {
   animation-duration: 7.5s;
   animation-delay: 0s;
   animation-fill-mode: forwards;
+  top: 6px;
+  right: 50px;
 }
 
 .nav-selectors {
@@ -79,6 +82,7 @@ h1 {
   justify-content: space-between;
   align-items: center;
   z-index: 3;
+
   text-decoration: none;
   color: rgb(0, 0, 0);
   padding: 10px;
