--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -126,41 +126,27 @@ h3 {
 /* Header .rating span {
   margin: 0.1rem;
 } */
-.productbox {
-  margin: 16px;
-  padding: 0;
-  /* text-align: center; */
+
+.pcol {
   display: flex;
-  height: 250px;
-  width: 300px;
-  /* flex-flow: wrap; */
-  justify-content: space-between;
+  float: left;
 }
-.productbox li {
-  display: inline-block;
+
+.productbox {
+  margin-left: 50px;
   flex: 1 1 12em;
   border: 2px solid #6f0212;
   border-radius: 25px;
   margin: 8px;
-  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-  float: right;
-}
-
-.productbox a {
-  display: inline-block;
-  text-decoration: none;
-  padding: 8px;
-  height: 100%;
-  width: 100%;
-  float: right;
 }
 
 .productbox img {
-  display: inline-block;
-  width: 400px;
+  display: flex;
+  width: 250px;
   max-width: 100%;
-  height: auto;
-  margin: 0 auto;
-  border-radius: 20px;
+  max-width: 100%;
+
+  margin: 5px;
+  /* border-radius: 20px; */
   float: right;
 }
