--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -18,7 +18,7 @@ body {
   margin: 0px;
   padding: 0px;
   overflow-x: hidden;
-  overflow-y: hidden;
+  /* overflow-y: hidden; */
 }
 
 h1 {
@@ -37,9 +37,9 @@ h1 {
   text-decoration: none;
 }
 .werm {
-  position: absolute;
-  top: -20px;
-  left: 35px;
+  position: fixed;
+  top: -15px;
+  left: -15px;
   height: 98px;
   width: 98px;
   z-index: 5;
@@ -47,12 +47,12 @@ h1 {
 
 .box1 {
   display: flex;
-  position: relative;
+  position: fixed;
   top: 0px;
   left: 0px;
   height: 50px;
   width: 100%;
-  background-color: rgba(0, 0, 0, 0.185);
+  background-color: rgba(58, 60, 63, 0.24);
 
   vertical-align: top;
   z-index: 2;
@@ -101,18 +101,19 @@ h1 {
   background-color: rgb(69, 71, 81);
 }
 
-main {
-  min-height: 80vh;
-}
 .bg {
-  position: absolute;
+  overflow-x: hidden;
+  /* overflow-y: hidden; */
+  position: fixed;
+  width: 100vw;
+  height: 120vh;
+  top: -90px;
   background-repeat: repeat;
   /* background-size: auto; */
-  /* image-rendering: optimizeQuality; */
-  /* image-rendering: crisp-edges; */
+  image-rendering: optimizeQuality;
+  image-rendering: crisp-edges;
   /* z-index: 0; */
   /* width: fit-content; */
-
   /* margin: 0 auto; */
   /* height: fit-content; */
 }
@@ -125,10 +126,6 @@ h3 {
   padding: 1rem 0;
 }
 
-/* Header .rating span {
-  margin: 0.1rem;
-} */
-
 /* //////////////////////          Home Page   //////////////////////////////////// */
 
 .pcol {
@@ -138,36 +135,41 @@ h3 {
 }
 
 .productbox {
-  margin-left: 50px;
+  margin-left: 120px;
+  margin-top: 50px;
   flex: 1 1 12em;
   /* border: 2px solid #6f0212; */
   border-radius: 25px;
-  margin: 8px;
+  /* margin: 10px; */
+  object-fit: 100%;
+  position: inherit;
 }
 
 .productbox img {
-  display: inline;
-  width: 180px;
-  max-width: 100%;
-  max-width: 100%;
+  display: flex;
+  /* width: 5vw;
+  height: 11vh; */
+  max-width: 20vw;
+  max-height: 17.5vh;
   /* z-index: 3; */
-  margin: 5px;
+  margin: 6px;
   /* border-radius: 20px; */
   float: right;
+  justify-content: center;
   animation-name: cover;
   animation-duration: 5s;
   animation-delay: 0s;
-  animation-fill-mode: backwards;
+  animation-fill-mode: forwards;
 }
 
 @keyframes cover {
   0% {
     opacity: 0;
-    color: #000000;
+    color: #00000000;
   }
-  40% {
+  10% {
     opacity: 0;
-    color: #000000;
+    color: #00000000;
   }
   100% {
     opacity: 1;
